2005-05-03  Murray Cumming <murrayc@murrayc.com>

	* gtk/src/cellrenderer.hg: Added the 
	sensitive property, which was maybe new in 
	GTK+ 2.6.

2005-05-01  Murray Cumming <murrayc@murrayc.com>

	* gdk/src/colormap.ccg:
	* gdk/src/colormap.hg: Deprecated alloc_colors() and 
	free_colors(). Add free_color() for use with 
	alloc_color(). Bug #157744

2005-04-27  Philip Langdale <plangdale@vmware.com>

	* gtk/src/action.hg: 
	Override default wrap behaviour for get_proxies to
	use the correct ownership semantics. (bug #172892)

2005-04-24  Murray Cumming <murrayc@murrayc.com>

	* gtk/src/button.hg:
	* gtk/src/gtk_docs_override.xml:
	* gtk/src/image.hg:
	* gtk/src/toolbutton.hg:
	Documentation: Change mentions of new_from_stock() 
	to mention the C++ constructors, and document those 
	constructors. 

2005-04-22  Murray Cumming <murrayc@murrayc.com>

	* gtk/src/cellrenderer.hg: Add documentation 
	saying that signal_editing_started() does not 
	work, so use the C API.
	* gtk/src/combobox.hg: Added TODO comment 
	for a future ABI break.

2005-04-19  Murray Cumming <murrayc@murrayc.com>

	* configure.in:
	* examples/book/Makefile.am:
	* examples/book/comboboxentry/.cvsignore:
	* examples/book/comboboxentry/Makefile.am:
	* examples/book/comboboxentry/complex/.cvsignore:
	* examples/book/comboboxentry/complex/Makefile.am:
	* examples/book/comboboxentry/complex/examplewindow.cc:
	* examples/book/comboboxentry/complex/examplewindow.h:
	* examples/book/comboboxentry/complex/main.cc:
	* examples/book/comboboxentry/text/.cvsignore:
	* examples/book/comboboxentry/text/Makefile.am:
	* examples/book/comboboxentry/text/examplewindow.cc:
	* examples/book/comboboxentry/text/examplewindow.h:
	* examples/book/comboboxentry/text/main.cc:
        Added ComboBoxEntry and ComboBoxEntryText examples, 
	based on the existing ComboBox and ComboBoxText 
	examples.

2005-04-15  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/menus_and_toolbars/Makefile.am: