@@ -1,5 +1,17 @@
 2005-05-03  Murray Cumming <murrayc@murrayc.com>
 
+	* gtk/gtkmm/comboboxentrytext.cc: 
+	* gtk/gtkmm/comboboxentrytext.h:
+	* gtk/gtkmm/comboboxtext.cc:
+	* gtk/gtkmm/comboboxtext.h:
+	Deprecated clear() in favour of new 
+	clear_items() method, because clear() exists 
+	in the base CellLayout class and is very different. 
+	Added remove_text() to remove items one at a time.
+	Added doxygen documentation comments.
+
+2005-05-03  Murray Cumming <murrayc@murrayc.com>
+
 	* gtk/src/cellrenderer.hg: Added the 
 	sensitive property, which was maybe new in 
 	GTK+ 2.6.
